tests/specs/test/fail_with_contain_unicode_filename/main.ts
Deno.test("test 0", () => {
  throw new Error();
});
